[gd_scene load_steps=40 format=1]

[ext_resource path="res://scenes/game_hero/enemies/minotaur.gd" type="Script" id=1]
[ext_resource path="res://textures/enemies/bosses/Minotaur/Minautor_down/minotaur_alpha_7_10.tex" type="Texture" id=2]
[ext_resource path="res://textures/enemies/bosses/Minotaur/Minautor_down/minotaur_alpha_7_11.tex" type="Texture" id=3]
[ext_resource path="res://textures/enemies/bosses/Minotaur/Minautor_down/minotaur_alpha_7_12.tex" type="Texture" id=4]
[ext_resource path="res://textures/enemies/bosses/Minotaur/Minautor_down/minotaur_alpha_7_5.tex" type="Texture" id=5]
[ext_resource path="res://textures/enemies/bosses/Minotaur/Minautor_down/minotaur_alpha_7_6.tex" type="Texture" id=6]
[ext_resource path="res://textures/enemies/bosses/Minotaur/Minautor_down/minotaur_alpha_7_7.tex" type="Texture" id=7]
[ext_resource path="res://textures/enemies/bosses/Minotaur/Minautor_down/minotaur_alpha_7_8.tex" type="Texture" id=8]
[ext_resource path="res://textures/enemies/bosses/Minotaur/Minautor_down/minotaur_alpha_7_9.tex" type="Texture" id=9]
[ext_resource path="res://textures/enemies/bosses/Minotaur/Minautor_right/minotaur_alpha_5_9.tex" type="Texture" id=10]
[ext_resource path="res://textures/enemies/bosses/Minotaur/Minautor_right/minotaur_alpha_5_10.tex" type="Texture" id=11]
[ext_resource path="res://textures/enemies/bosses/Minotaur/Minautor_right/minotaur_alpha_5_8.tex" type="Texture" id=12]
[ext_resource path="res://textures/enemies/bosses/Minotaur/Minautor_right/minotaur_alpha_5_7.tex" type="Texture" id=13]
[ext_resource path="res://textures/enemies/bosses/Minotaur/Minautor_right/minotaur_alpha_5_11.tex" type="Texture" id=14]
[ext_resource path="res://textures/enemies/bosses/Minotaur/Minautor_right/minotaur_alpha_5_12.tex" type="Texture" id=15]
[ext_resource path="res://textures/enemies/bosses/Minotaur/Minautor_right/minotaur_alpha_5_6.tex" type="Texture" id=16]
[ext_resource path="res://textures/enemies/bosses/Minotaur/Minautor_right/minotaur_alpha_5_5.tex" type="Texture" id=17]
[ext_resource path="res://textures/enemies/bosses/Minotaur/Minautor_left/minotaur_alpha_1_9.tex" type="Texture" id=18]
[ext_resource path="res://textures/enemies/bosses/Minotaur/Minautor_left/minotaur_alpha_1_10.tex" type="Texture" id=19]
[ext_resource path="res://textures/enemies/bosses/Minotaur/Minautor_left/minotaur_alpha_1_8.tex" type="Texture" id=20]
[ext_resource path="res://textures/enemies/bosses/Minotaur/Minautor_left/minotaur_alpha_1_7.tex" type="Texture" id=21]
[ext_resource path="res://textures/enemies/bosses/Minotaur/Minautor_left/minotaur_alpha_1_11.tex" type="Texture" id=22]
[ext_resource path="res://textures/enemies/bosses/Minotaur/Minautor_left/minotaur_alpha_1_12.tex" type="Texture" id=23]
[ext_resource path="res://textures/enemies/bosses/Minotaur/Minautor_left/minotaur_alpha_1_6.tex" type="Texture" id=24]
[ext_resource path="res://textures/enemies/bosses/Minotaur/Minautor_left/minotaur_alpha_1_5.tex" type="Texture" id=25]
[ext_resource path="res://textures/enemies/bosses/Minotaur/Minautor_up/minotaur_alpha_3_10.tex" type="Texture" id=26]
[ext_resource path="res://textures/enemies/bosses/Minotaur/Minautor_up/minotaur_alpha_3_11.tex" type="Texture" id=27]
[ext_resource path="res://textures/enemies/bosses/Minotaur/Minautor_up/minotaur_alpha_3_12.tex" type="Texture" id=28]
[ext_resource path="res://textures/enemies/bosses/Minotaur/Minautor_up/minotaur_alpha_3_5.tex" type="Texture" id=29]
[ext_resource path="res://textures/enemies/bosses/Minotaur/Minautor_up/minotaur_alpha_3_6.tex" type="Texture" id=30]
[ext_resource path="res://textures/enemies/bosses/Minotaur/Minautor_up/minotaur_alpha_3_7.tex" type="Texture" id=31]
[ext_resource path="res://textures/enemies/bosses/Minotaur/Minautor_up/minotaur_alpha_3_8.tex" type="Texture" id=32]
[ext_resource path="res://textures/enemies/bosses/Minotaur/Minautor_up/minotaur_alpha_3_9.tex" type="Texture" id=33]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 88, 88 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [  ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "down_walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "right_walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ) ],
"loop": true,
"name": "left_walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ) ],
"loop": true,
"name": "up_walk",
"speed": 5.0
} ]

[sub_resource type="Animation" id=4]

resource/name = "down_walk"
length = 0.7
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.7 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -100 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 6, 5, 4, 3, 2, 1, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../CollisionShape2D:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.7 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -200 ), Vector2( 0, 10 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:animation")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ "down_walk" ]
}

[sub_resource type="Animation" id=5]

resource/name = "left_walk"
length = 0.7
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 6, 5, 4, 3, 2, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.7 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 100, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../CollisionShape2D:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.7 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 200, 0 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:animation")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ "left_walk" ]
}

[sub_resource type="Animation" id=3]

resource/name = "right_walk"
length = 0.7
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.7 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -100, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../CollisionShape2D:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.7 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -200, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:animation")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ "right_walk" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 6, 5, 4, 3, 2, 1, 0 ]
}

[sub_resource type="Animation" id=6]

resource/name = "up_walk"
length = 0.7
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.7 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 100 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../CollisionShape2D:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.7 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 200 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 6, 5, 4, 3, 2, 1, 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:animation")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ "up_walk" ]
}

[node name="minotaur" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -200 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 0, -98.6174 )
transform/scale = Vector2( 2, 2 )
frames = SubResource( 2 )
animation = "down_walk"
offset = Vector2( 0, -100 )

[node name="Movement_anims" type="AnimationPlayer" parent="AnimatedSprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/down_walk = SubResource( 4 )
anims/left_walk = SubResource( 5 )
anims/right_walk = SubResource( 3 )
anims/up_walk = SubResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Windup_anims" type="AnimationPlayer" parent="AnimatedSprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Attack_anims" type="AnimationPlayer" parent="AnimatedSprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Charge_anims" type="AnimationPlayer" parent="AnimatedSprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Circular_strike_anim" type="AnimationPlayer" parent="AnimatedSprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="TextureProgress" type="TextureProgress" parent="AnimatedSprite"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
texture/under = null
texture/over = null
texture/progress = null
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0, -200 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false


